wikipedia/common.css
/*
Add to
https://ru.wikipedia.org/wiki/Участник:<Username>/common.css
https://en.wikipedia.org/wiki/User:<Username>/common.css
*/

.infobox {
	border: 1px solid #ddd;
	border-spacing: 3px;
	background-color: #eee;
	color: black;
	margin: 0.5em 0 0.5em 1em;
	padding: 0.2em;
	float: right;
	clear: right;
	font-size: 88%;
	line-height: 1.5em;
}

.infobox > * > tr > td,
.infobox > * > tr > th {
	padding: 2px 5px;
	border-bottom: 1px solid #000;
}

.infobox a,
.infobox > * > tr:last-child > th,
.infobox > * > tr:last-child > td {
	border: 0
}

.infobox-above {
	font-size: 120%;
	text-align: center;
	background: #ccc !important;
}

.infobox-below {
	font-size: 120%;
	text-align: center;
	background: #ccc !important;
}

.infobox-header {
	font-size: 110%;
	text-align: center;
	background: #ccc !important;
}

.navbox th, .navbox-abovebelow, .navbox-group, .navbox-subgroup, .navbox-title, th.navbox-group {
	background-color: #ccc !important;
}

#mw-content-text > div > table.infobox.vcard > tbody > tr:nth-child(even) > td > div.mw-customtoggle-maps1.noprint.mw-customtoggle {
	background-color: #eee !important;
}

.ambox {
	margin: 0 10%;
	border: 1px solid #ddd;
	border-left: 10px solid #0062cc;
	background: #eee;
}

.catlinks {
	border: 1px solid #ddd;
	background-color: #eee;
	padding: 5px;
	margin-top: 1em;
	clear: both;
}

blockquote {
	padding-left: 10px;
	margin-left: 0;
	font-size: 11pt;
	color: #666 !important;
	border-left: 4px solid #aaa !important;
	overflow: auto;
}

div.tright, div.floatright, table.floatright {
	color: #666;
	border: 1px solid #aaa !important;
	background-color: #eee !important;
}

.mw-parser-output .ts-Цитата-container {
	display: contents !important;
	background: #FFF !important;
}

.mw-parser-output .ts-Цитата-quote {
	color: #666;
	border: 1px solid #aaa !important;
	border-left: 4px solid #aaa !important;
	background-color: #eee !important;
	padding: 5px;
	padding-left: 10px;
	overflow: auto;
}

.mw-parser-output .ts-Цитата-leftQuote {
	display: none;
}

.mw-parser-output .ts-Цитата-rightQuote {
	display: none;
}


.mbox-image {
	border: none;
	padding: 2px 0 2px 0.9em;
	text-align: center;
	background: #eee;
}



table.plainlinks {
	border: 1px solid #ddd !important;
	background-color: #eee !important;
	padding: 5px;
	font-size: 95%;
}












.mw-parser-output .ts-Боковая_навигационная_таблица-body {
	float: right;
	clear: right;
	width: 23em;
	margin: 0 0 1.0em 1.0em;
	background: #eee !important;
	border: 1px solid #ddd !important;
	padding: 0.4em;
	border-spacing: 0.2em;
	text-align: center;
	line-height: 1.4em;
	font-size: 90%;
}

.mw-parser-output .ts-Боковая_навигационная_таблица-heading {
	padding: 0.2em 0;
	font-weight: bold;
	color: #000 !important;
	background: #ccc !important;
}

.mw-parser-output .ts-Боковая_навигационная_таблица-title {
	padding: 0.2em 0.4em 0.2em;
	font-size: 125%;
	line-height: 1.15em;
	font-weight: bold;
	color: #000 !important;
	background: #2224 !important;
}

#mw-content-text > div > div:nth-child(4) {
	border: 1px solid #ddd !important;
}

.mw-parser-output .ts-Раздел_форума-wrapper {
	background: #eee !important;
	border: 1px solid #ddd !important;
	margin-bottom: 1em;
	padding: 0 1.5em;
	clear: right;
}

.mw-parser-output .ts-Общение-wrapper {
	text-align: center;
	font-size: .95em;
	padding: .25em;
	clear: both;
	background: #ddd !important;
}

#mw-content-text > div > div.nocolbreak.tright > table > tbody > tr > td {
	background: #eee !important;
	border: 1px solid #eee !important;
}

#mw-content-text > div > div.nocolbreak.tright {
	border: 1px solid #eee !important;
}

#mw-content-text > div > div:nth-child(31) > div.nocolbreak.tright > table > tbody > tr > td:nth-child(1) {
	line-height: 1.6;
	direction: ltr;
	font-family: sans-serif;
	width: 45px;
	text-align: center;
	background: #ffeb00 !important;
	color: #000000;
	font-size: 24pt;
	font-weight: bold;
}

#mw-content-text > div > div:nth-child(31) > div.nocolbreak.tright > table > tbody > tr > td:nth-child(2) {
	direction: ltr;
	font-family: sans-serif;
	padding: 2pt 4pt;
	line-height: 1.25em;
	text-align: left;
	background: #fffdf0 !important;
	color: #000000;
	font-size: 8pt;
}



.wikitable {
	background-color: #eee;
	color: #202122;
	margin: 1em 0;
	border: 1px solid #ddd;
	border-collapse: collapse
}

.wikitable > tr > th,
.wikitable > tr > td,
.wikitable > * > tr > th,
.wikitable > * > tr > td {
	border: 1px solid #ddd;
	padding: 0.2em 0.4em
}

.wikitable > tr > th,
.wikitable > * > tr > th {
	background-color: #ddd;
	text-align: center
}

.wikitable > caption {
	font-weight: bold
}


.standard > tr > th, .standard > * > tr > th, .wide > tr > th, .wide > * > tr > th {
	background-color: #ddd;
}


.standard > tr > th, .standard > tr > td, .standard > * > tr > th, .standard > * > tr > td, .wide > tr > th, .wide > tr > td, .wide > * > tr > th, .wide > * > tr > td {
	border: 1px solid #ddd;
	padding: 0.2em 0.4em;
}




.inverted-content-padding {
	background: #ccc !important;
	padding: 1.3em 0;
}









.error,
 .warning,
 .success {
	font-size: larger
}

.error {
	color: #d33
}

.warning {
	color: #ac6600
}

.success {
	color: #14866d
}

.mw-ui-button {
	background-color: #0062cc !important;
	color: #fff !important;
	display: inline-block;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	min-width: 4em;
	max-width: 28.75em;
	margin: 0;
	padding: .1rem .75rem;
	border: #001933 1px solid !important;
	border-radius: 2px;
	cursor: pointer;
	vertical-align: text-top;
	font-family: inherit;
	font-size: 0.9rem;
	font-weight: 400;
	line-height: 1.5em;
	text-align: center;
	-webkit-appearance: none;
	-moz-appearance: none;
}

.mw-ui-button.mw-ui-quiet, .mw-ui-button.mw-ui-quiet.mw-ui-progressive, .mw-ui-button.mw-ui-quiet.mw-ui-destructive {
	background-color: transparent !important;
	color: #202122 !important;
	border-color: transparent !important;
}
/* ... */

